force-app/main/default/objects/SaleBOAcc_Rel__c/SaleBOAcc_Rel__c.object-meta.xml
<CustomObject>
    <label>Sale BO Account Relation</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>RowNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sale BO Account Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>