force-app/main/default/objects/SaleBOAcc_Rel__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sale BO Account Relations</relationshipLabel>
    <relationshipName>Sale_BO_Account_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>