force-app/main/default/objects/SaleBOAcc_Rel__c/fields/AdditionalBOS__c.field-meta.xml
<CustomField>
    <fullName>AdditionalBOS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AdditionalBOS</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sale_BO_Account_Relations2</relationshipName>
    <type>Lookup</type>
</CustomField>