force-app/main/default/objects/SaleBOAcc_Rel__c/fields/AssignedBOS__c.field-meta.xml
<CustomField>
    <fullName>AssignedBOS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssignedBOS</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sale_BO_Account_Relations1</relationshipName>
    <type>Lookup</type>
</CustomField>