force-app/main/default/objects/SaleBOAcc_Rel__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Sale BO Account Relations</relationshipLabel>
    <relationshipName>Sale_BO_Account_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>