force-app/main/default/objects/SaleBOAcc_Rel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MarketSegment__c</columns>
    <columns>Account__c</columns>
    <columns>Manager__c</columns>
    <columns>AssignedBOS__c</columns>
    <columns>AdditionalBOS__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>